# simple-mopplot

./: .gitignore  LICENSE  main.py  pyproject.toml
src/debug/: tree_printer.py
src/mopplot/: exceptions.py  mopplot_doc.py  trait_path.py
src/mopplot/chelper/: __init__.py  bases.py  nodes.py  seq_validator.py
src/mopplot/lexer/: __init__.py  param.py  pattern_lexer.py  token.py
src/mopplot/serializer/: __init__.py  json_serializer.py
src/mopplot/syntax/: syntax_tree.py  tree_builder.py
src/mopplot/trait/: __init__.py  field.py  trait.py  trait_lib.py
tests/mopplot/lexer/: test_pattern_lexer.py
